osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experiment_bucket_size_too_large[buckets1-bucket_sizes1].txt
error: 
                    33.34 is over the
                    current max of 33.33.
                    Either reduce the bucket size or reduce the number of buckets
                    
--> main.sml:3:70
     |
   3 | A = Experiment(entity=E1, buckets=['control', 'b', 'c'], bucket_sizes=[33.34, 33.33, 33.33], version=1, revision=1)
     |                                                                       ^ 
                                                                             |                     max percentage size of each bucket is 100/(# of buckets) rounded
                                                                             |                     down to the nearest hundreth decimal place
                                                                             |                     